# embeddings-generator

./: .env_example  .flake8  .gitignore  .safety-policy.yml  .safety-policy.yml.backup  ADMIN_PASSWORD.md  ADMIN_UI_README.md  CHUNKING_README.md  CI-CD-README.md  DOCKER.md  Dockerfile  Dockerfile.backup  Embeddings_Service.postman_collection.json  FEATURE_EMBED_CHUNKS.md  Makefile  PR_REVIEW_CHANGES.md  QUICKSTART.md  README.md  SECURITY.md  TASK_QUEUE_README.md  TEST_INSTALLATION.md  USAGE_DASHBOARD_SUMMARY.md  VDB_IMPLEMENTATION.md  app-auth.db  demo_batch_operations.py  demo_chunking.py  demo_semantic_search.py  demo_task_queue.py  demo_usage_dashboard.py  deploy.sh  docker-compose.yml.backup  main.py  pyproject.toml  requirements-security.txt  requirements.txt  run_pm2.sh  run_supervised.sh  show_login_info.sh  test_batch_operations.py  test_chunked.py  (+2 more)
app/: auth.py  bootstrap.py  bootstrap_auth.py  config.py
assets/: README.md
data/: auth.db  tasks.db
docs/: AUTH_FIX_SUMMARY.md  BATCH_OPERATIONS.md  COPILOT_FEEDBACK.md  DATABASE_EXPLORER.md  EXPLORER_NAVIGATION_FLOW.md  EXPLORER_QUICK_START.md  EXPLORER_VISUAL_GUIDE.md  PHASE2_ADMIN_UI.md  PHASE2_ARCHITECTURE.md  PHASE2_SUMMARY.md  PHASE3_PROJECT_ACCESS_CONTROL.md  PHASE4_USAGE_AND_ADVANCED_FEATURES.md  PRODUCTION_DEPLOYMENT_FIX.md  TEST_FIXES_NEEDED.md  USAGE_DASHBOARD.md  WEB_EXPLORER_INTEGRATION.md  tests_failed.md  vdb_auth_implementation_tasks.md  vdb_user_project_management_spec.md  vector_db_service_tech_spec.md
proto/: embeddings.proto  embeddings_pb2.py  embeddings_pb2.pyi  embeddings_pb2_grpc.py
scripts/: QUICK_REFERENCE.md  README_EXPLORER.md  check_dependencies.py  db_explorer.py  demo_admin_ui.sh  (+6 more)
(+63 files in other folders)
